# python-polylith-example-tdd-theme

./: README.md  pyproject.toml
bases/greet_api/src/example/greet_api/: __init__.py  core.py
bases/greet_api/test/example/greet_api/: test_core.py
components/greeting/test/example/greeting/: test_core.py
projects/my_fastapi_project/: Dockerfile  pyproject.toml
