[tool.poetry]
name = "python-polylith-example-tdd-theme"
version = "0.1.0"
description = ""
authors = ["David Vujic"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "example/greeting", from = "components/greeting/src"},
    {include = "example/log", from = "components/log/src"},
    {include = "example/greet_api", from = "bases/greet_api/src"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
