[tool.poetry]
name = "my_fastapi_project"
version = "0.1.0"
description = ""
authors = ['David Vujic']
license = ""
packages = [
    {include = "example/greeting", from = "../../components/greeting/src"},
    {include = "example/log", from = "../../components/log/src"},
    {include = "example/greet_api", from = "../../bases/greet_api/src"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
